# ktools

./: .clang-format  .cmake-format.py  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  cmake_uninstall.cmake.in  config.h.in  configure
.github/workflows/: ci.yml  linux.yml  macos.yml
cmake/: compiler_specific.cmake  integer_types.cmake  out_of_source_build.cmake  warnings.cmake
lib/: CMakeLists.txt
lib/boost/detail/: endian.hpp
lib/boost/predef/: architecture.h  compiler.h  hardware.h  language.h  library.h  make.h  os.h  other.h  platform.h  version.h  version_number.h
lib/boost/predef/architecture/: alpha.h  arm.h  blackfin.h  convex.h  e2k.h  ia64.h  loongarch.h  m68k.h  mips.h  parisc.h  ppc.h  ptx.h  pyramid.h  riscv.h  rs6k.h  sparc.h  superh.h  sys370.h  sys390.h  x86.h  z.h
lib/boost/predef/compiler/: borland.h  clang.h  comeau.h  compaq.h  diab.h  digitalmars.h  (+24 more)
lib/pugixml/: CMakeLists.txt  pugiconfig.hpp  pugixml.cpp  pugixml.hpp
lib/squish/: CMakeLists.txt  ChangeLog.txt  alpha.cpp  alpha.h  clusterfit.cpp  clusterfit.h  colourblock.cpp  colourblock.h  colourfit.cpp  colourfit.h  colourset.cpp  colourset.h  maths.cpp  maths.h  rangefit.cpp  rangefit.h  simd.h  simd_float.h  simd_sse.h  simd_ve.h  singlecolourfit.cpp  singlecolourfit.h  squish.cpp  squish.h
lib/squish/CMakeModules/: FindlibSquish.cmake
lib/squish/extra/: squishgen.cpp  squishpng.cpp  squishtest.cpp
lib/tclap/: Arg.h  ArgException.h  ArgTraits.h  CmdLine.h  CmdLineInterface.h  CmdLineOutput.h  Constraint.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  LICENSE.txt  MultiArg.h  MultiSwitchArg.h  OptionalUnlabeledTracker.h  StandardTraits.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  Visitor.h  XorHandler.h  ZshCompletionOutput.h
src/: CMakeLists.txt
src/common/: algebra.hpp  atlas.cpp  atlas.hpp  binary_io_utils.hpp  compat.hpp  file_abstraction.cpp  file_abstraction.hpp  image_operations.hpp  ktools_bit_op.hpp  ktools_common.cpp  ktools_common.hpp  ktools_options_customization.cpp  ktools_options_customization.hpp  metaprogramming.hpp
src/common/compat/: common.hpp  fs.hpp  posix.hpp
src/common/ktex/: headerfield_specs.hpp  ktex.cpp  ktex.hpp  specs.cpp  specs.hpp
src/krane/: kanim.cpp  kanim.hpp  kanim_serialize.cpp  kbuild.cpp  kbuild.hpp  kbuild_serialize.cpp  krane.cpp  krane.hpp  krane_common.hpp  krane_options.cpp  krane_options.hpp  scml.cpp  scml.hpp
src/ktech/: image_processing.hpp  ktech.cpp  ktech.hpp  ktech_common.hpp  ktech_options.cpp  ktech_options.hpp
test/: test.sh
test/src/chester/: atlas-0.tex
(+56 files in other folders)
